# Cache

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  main.cpp  Без названия 5.odt
Chart/: Legeng to the chart.txt  Легенда к графику.rtf
include/: cache.h
scripts/: duplication.sh
sources/: main.cpp
